# mapviz

./: .gitignore  main.py  pyproject.toml
mapviz/: geometry.py  main.py  map.py  svg.py
notebooks/: main.ipynb
website/: index.html  script.js  styles.css
